// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rbac user tags list component should render conrrectly with tags 1`] = `
<div>
  <h3>
    Smart Management
  </h3>
  <div
    className="form-horizontal static"
  >
    <div
      className="form-group"
    >
      <label
        className="col-md-2 control-label"
      >
         
        %s Tags
      </label>
      <div
        className="col-md-8"
      >
        <Icon
          name="tag"
          type="fa"
        />
         
        Tag 1: Tag value 1
        <br />
        <Icon
          name="tag"
          type="fa"
        />
         
        Tag 2: Tag value 2
        <br />
        <Icon
          name="tag"
          type="fa"
        />
         
        Tag 3: Tag value 3
        <br />
        <Icon
          name="tag"
          type="fa"
        />
         
        Tag 4: Tag value 4
        <br />
        <Icon
          name="tag"
          type="fa"
        />
         
        Tag 5: Tag value 5
        <br />
      </div>
    </div>
  </div>
</div>
`;

exports[`Rbac user tags list component should render conrrectly without tags 1`] = `
<div>
  <h3>
    Smart Management
  </h3>
  <div
    className="form-horizontal static"
  >
    <div
      className="form-group"
    >
      <label
        className="col-md-2 control-label"
      >
         
        %s Tags
      </label>
      <div
        className="col-md-8"
      >
        <span>
          <Icon
            name="tag"
            type="fa"
          />
           
          No %s Tags have been assigned
        </span>
      </div>
    </div>
  </div>
</div>
`;
